--- a/marketplace/Dockerfile
+++ b/marketplace/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt /app/
+COPY marketplace/requirements.txt /app/
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
