--- a/marketplace/Dockerfile
+++ b/marketplace/Dockerfile
@@ -15,18 +15,18 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt /app/
+COPY marketplace/requirements.txt /app/
+
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-# Copy project files (from marketplace/ into /app/)
+# Copy project files
 COPY . /app/
 
-# Collect static files (ignore errors if no static setup yet)
+# Collect static files (if any)
 RUN python manage.py collectstatic --noinput || true
 
 # Expose port 8000 for Render
 EXPOSE 8000
-
 # Run the app
 CMD ["gunicorn", "marketplace.wsgi:application", "--bind", "0.0.0.0:8000"]
