--- a/marketplace/Dockerfile
+++ b/marketplace/Dockerfile
@@ -29,4 +29,4 @@ RUN python manage.py collectstatic --noinput || true
 # Expose port 8000 for Render
 EXPOSE 8000
 # Run the app
-CMD ["gunicorn", "marketplace.wsgi:application", "--bind", "0.0.0.0:8000"]
+CMD ["gunicorn", "marketplace.wsgi:application", "--bind", "0.0.0.0:$PORT"]
