--- a/marketplace/Dockerfile
+++ b/marketplace/Dockerfile
@@ -30,4 +30,5 @@ RUN python manage.py collectstatic --noinput || true
 EXPOSE 8000
 # Run the app
 # CMD ["gunicorn", "marketplace.wsgi:application", "--bind", "0.0.0.0:$PORT"]
-CMD gunicorn marketplace.wsgi:application --bind 0.0.0.0:$PORT
+# CMD gunicorn marketplace.wsgi:application --bind 0.0.0.0:$PORT
+CMD gunicorn marketplace.marketplace.wsgi:application --bind 0.0.0.0:$PORT
