--- a/marketplace/Dockerfile
+++ b/marketplace/Dockerfile
@@ -31,4 +31,5 @@ EXPOSE 8000
 # Run the app
 # CMD ["gunicorn", "marketplace.wsgi:application", "--bind", "0.0.0.0:$PORT"]
 # CMD gunicorn marketplace.wsgi:application --bind 0.0.0.0:$PORT
-CMD gunicorn marketplace.marketplace.wsgi:application --bind 0.0.0.0:$PORT
+# CMD gunicorn marketplace.marketplace.wsgi:application --bind 0.0.0.0:$PORT
+CMD ["gunicorn", "marketplace.marketplace.wsgi:application", "--bind", "0.0.0.0:$PORT"]
