--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,14 +26,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r marketplace/requirements.txt
 
-      # 4. Run all tests with coverage
+      # 4. Run all tests with coverage (from marketplace folder)
       - name: Run Tests with Coverage
+        working-directory: marketplace
+        env:
+          DJANGO_SETTINGS_MODULE: marketplace.settings
+          PYTHONPATH: .
         run: |
           pytest --cov=. --cov-report=term-missing
 
       # 5. Build Docker image
       - name: Build Docker Image
-        run: docker build -t my-django-app .
+        run: docker build -t my-django-app marketplace/.
 
       # 6. Trigger Render deployment
       - name: Deploy to Render
