--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,13 +43,12 @@ jobs:
           AFRICASTALKING_USERNAME: ${{ secrets.AFRICASTALKING_USERNAME }}
           AFRICASTALKING_API_KEY: ${{ secrets.AFRICASTALKING_API_KEY }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
-
         run: |
           pytest --cov=. --cov-report=term-missing
 
-      # 5. Build Docker image
+      # 5. Build Docker image (fixed path)
       - name: Build Docker Image
-        run: docker build -t my-django-app marketplace/.
+        run: docker build -t my-django-app -f marketplace/Dockerfile .
 
       # 6. Trigger Render deployment
       - name: Deploy to Render
