--- a/marketplace/requirements.txt
+++ b/marketplace/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
 coverage==7.10.7
+corsheaders==3.13.0
 cryptography==46.0.1
 Django==5.2.6
 django-environ==0.12.0
