--- a/marketplace/docker-compose.yml
+++ b/marketplace/docker-compose.yml
@@ -1,3 +1,15 @@
+# services:
+#   web:
+#     build: .
+#     command: gunicorn marketplace.wsgi:application --bind 0.0.0.0:8000
+#     volumes:
+#       - .:/app
+#     ports:
+#       - "8000:8000"
+#     env_file:
+#       - .env
+version: "3.9"
+
 services:
   web:
     build: .
@@ -8,3 +20,16 @@ services:
       - "8000:8000"
     env_file:
       - .env
+    depends_on:
+      - db
+
+  db:
+    image: postgres:15
+    ports:
+      - "5432:5432"
+    env_file:
+      - .env
+    environment:
+      POSTGRES_USER: ${USERNAME}
+      POSTGRES_PASSWORD: ${PASSWORD}
+      POSTGRES_DB: ${DATABASE}
